- Added the media queries for the modal on a smaller screen size - Fixed the z-indexes on the header - Fixed the margins on the header on medium screen sizes - Added JavaScript to remove the horizontal scroll bar on page load - Lowered z-index on header image, and changed position of the query2, so that it appears over the image. - Added media query for the outer sidebar overlay to be the correct width on smaller screen sizes - Added media queries for the sidebar to have some options appear only on smaller screens, and some only on large screens.

--- a/partials/_header.scss
+++ b/partials/_header.scss
@@ -10,6 +10,7 @@
     display: block;
     max-height: 75%;
     max-width: 100%;
+    z-index: 50;
 }
 
 body {
@@ -25,7 +26,7 @@ body {
     top: 0;
     transition: top 0.2s ease-in-out;
     background-color: white;
-    z-index: 5;
+    z-index: 30;
     width: 100%;
     button {
         display: inline-block;
@@ -79,11 +80,11 @@ body {
 #form-2-main-cont {
     position: fixed;
     height: 80px;
-    z-index: 4;
+    z-index: 40;
     width: 100%;
     top: 80px;
     transition: top 0.2s ease-in-out;
-    background-color: white;
+    background-color: $white;
     
 }
 
@@ -93,8 +94,8 @@ body {
     margin-right: 15px;
     margin-bottom: -4px;
     position: relative;
-    background-color: white;
-    z-index: 6;
+    background-color: $white;
+    z-index: 60;
 
     .fa-magnifying-glass {
         position: absolute;
@@ -120,6 +121,7 @@ body {
     box-shadow: inset 0 1px 1px rgb(0 0 0 / 8%);
     background-color: rgba(0,0,0,.1);
     color: #555;
+    z-index: 10;
 }
 
 .q2-but {
